@@ -27,7 +27,7 @@ AC_CHECK_HEADERS([stdlib.h string.h])
 AC_CHECK_FUNCS([memset])
 
 # Dependencies
-GTK_REQUIRED_VERSION=2.2.0
+GTK_REQUIRED_VERSION=2.3.0
 GNOME_VFS_REQUIRED_VERSION=2.2.0
 LIBXML_REQUIRED_VERSION=2.5.0
 GNOME_PRINT_REQUIRED_VERSION=2.2.0
