@@ -1,3 +1,13 @@
+2003-12-09  Gustavo Giraldez  <gustavo.giraldez@gmx.net>
+
+	* configure.in: Updated required Gtk+ version tu use the new
+	GtkFileChooser.
+
+2003-12-06  Jan Arne Petersen  <jpetersen@uni-bonn.de>
+
+	* tests/test-widget.c: (file_selected_cb), (open_file_cb): Replace
+	GtkFileSelection with GtkFileChooser.
+
 2003-12-03  Sanlig Badral  <badral@openmn.org>
 
 	* configure.in: Added "mn" to ALL_LINGUAS
